--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^4.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.0",
     "faker": "^6.6.6",
