--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
     "@tanstack/react-table": "^8.9.11",
@@ -41,6 +42,7 @@
     "eslint-config-next": "^14.0.0",
     "faker": "^6.6.6",
     "lucide-react": "^0.276.0",
+    "nanoid": "^5.1.6",
     "next": "^14.0.0",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
@@ -62,5 +64,8 @@
     "uploadthing": "^7.7.4",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/react-pdf": "^6.2.0"
   }
 }
